--- a/midterm/css/styles.css
+++ b/midterm/css/styles.css
@@ -1,94 +1,114 @@
-html{
+/* Add basic tyles to html*/
+html {
     background-color: #aad4cf;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-header img{
-    position: relative;
+/* Move the image to the left*/
+img {
+    float:left;
 }
 
-header h1{
-    color: white;
-    position: absolute;
-    left:1600px;
-    top: 15%;
-    
-}
-
-
-
-
-
-body{
+/* Add some basic styles to the body*/
+body {
     background-color:rgb(210, 243, 233);
-    padding: 0px 20px 20px 20px;
-    margin: 0px 800px 0px 800px ;
-    font-size: 50px;
-
+    padding-bottom: 20px;
+    margin: 0 400px;
 }
 
-.banner{position: relative;
-        width:90%;
-        margin:0 auto;
-
+/* Position the image on the page*/
+#hero-image-container {
+    position: relative;
+    text-align: center;
+    overflow: auto;
 }
 
+/* Resize the image*/
+#hero-image {
+    width: 100%;
+    height: 300px;
+}
 
-
+/*Position the site title on top of the image*/
 .site-title{
     position: absolute;
     color:white;
-    text-align:center;
-    
+    left: 50%;
+    font-size: 48px;
+    transform: translate(-50%, 200%);
 }
 
-
-nav li{
-    list-style-type: none;
-    display:inline-block;
-    width:30%;
-    font-weight:bold;
-    border-right: 3px solid;
-}
-
-nav ul li:last-child{
-    border-right: none;
-}
-
-#fullname{
-    width:100%;
-    height:50px;
-}
-
-#email{
+/*Add padding to the navigation*/
+nav {
     width: 100%;
-    height: 50px;
+    padding: 10px 0;
 }
 
-#message{
-    width:100%;
-    height:150px;
+/*Adds border between navigation*/
+nav a{
+    border-right: 1px solid black;
 }
 
-
-#radio1{
-    height:30px;
-    width:30px;
+/*Removes the last border line between navigation*/
+nav a:last-child{
+    border-right:none;
 }
 
-#radio2{
-    height:30px;
-    width:30px;
+/* Do some decoration to the navigation*/
+nav .nav-item{
+    text-decoration: none;
+    width: calc(99% / 3);
+    float: left;
+    text-align: center;
+    font-weight: bold;
+    color: black;
 }
 
-#radio3{
-    height:30px;
-    width:30px;
+.content-wrapper {
+    padding: 0 10px;
 }
 
-#submit1{
-    height:50px;
-    width:80px;
-    font-size:20px;
+/*Resize the image with paddding */
+.main-article img {
+    padding: 0 10px 10px 0;
+    width: 200px;
+    height: 200px;
+}
+
+/* Do size arrangements to the elements in the form*/
+.field-wrapper {
+    margin-bottom: 20px;
+}
+
+.field-wrapper label {
+    display: block;
+    width: 100%;
+}
+
+.field-wrapper input {
+    width: 100%;
+}
+
+.field-wrapper textarea {
+    width: 100%;
+    height: 100px;
+}
+
+.radio-wrapper {
+    display: block;
+}
+
+input[type="submit"] {
+    margin-top: 20px;
+    background-color: transparent;
+    padding: 10px;
+    border: 1px solid black;
+}
+
+footer {
+    text-align: right;
+    margin-top: 10px;
+    padding: 0 10px;
 }
 
 
